--- a/repl.html
+++ b/repl.html
@@ -1,5 +1,5 @@
 
-<prompt>> <cursor>_</cursor></prompt>
+<prompt>> <cursor id="cursor">_</cursor></prompt>
 
 <style>
   body {
@@ -28,3 +28,18 @@
   }
   @keyframes blink { 50% { opacity: 0; }}
 </style>
+
+<script type='text/javascript' src="bubblescript.js"></script>
+<script type='text/bubblescript'>
+;(alert "Petra!")
+(def cursor
+  (document.getElementById "cursor"))
+(def xoxo cursor.parentNode)
+
+(def typeChar (fn [c]
+  (xoxo.insertBefore
+    (document.createTextNode c) cursor)))
+
+(window.addEventListener 'keypress
+  (jsfn [e] (typeChar e.key)))
+</script>
