Frick frock frizzle frop.
https://www.youtube.com/watch?v=QYh6mYIJG2Y

--- a/repl.html
+++ b/repl.html
@@ -31,18 +31,39 @@
 
 <script type='text/javascript' src="bubblescript.js"></script>
 <script type='text/bubblescript'>
+;˚mef candy crunch love
+; td
+  ; indent to continue line w/o pns
+  ; fix bgs
+  ; arrows
+  ; bs
+  ; exec
+
 def cursor,
   (document.getElementById "cursor")
 
-def xoxo cursor.parentNode
+def get-id (fn [a]
+  (document.getElementById a))
+
+def cursor (get-id "cursor")
+def xoxo  cursor.parentNode
 
 def typeChar (fn [c]
   (xoxo.insertBefore
-    (document.createTextNode c) cursor))
+    (document.createTextNode c)
+     cursor))
 
-;window.addEventListener 'keypress ,
-;  (jsfn [e] (typeChar e.key))
-send window 'addEventListener,
-  'keypress (jsfn [e] (typeChar e.key))
+def backspace (fn [q]
+  (xoxo.removeChild
+     cursor.previousSibling))
+
+window.addEventListener 'keypress,
+  (jsfn [e] (typeChar e.key))
+
+window.mg
+
+;send window 'addEventListener,
+;  'keypress (jsfn [e]
+;    (typeChar e.key))
 7
 </script>
