Zataran! https://www.youtube.com/watch?v=59QSjoz1AuI

--- a/repl.html
+++ b/repl.html
@@ -39,8 +39,15 @@
   ; bs
   ; exec
 
+
+x.y
 def cursor,
   (document.getElementById "cursor")
+
+def cursor,
+  (send document
+    'getElementById
+    "cursor")
 
 def get-id (fn [a]
   (document.getElementById a))
