--- a/repl.html
+++ b/repl.html
@@ -37,7 +37,7 @@
   @keyframes blink { 50% { opacity: 0; }}
 </style>
 
-<script type='text/javascript' src="../bubblescript.js"></script>
+<script type='text/javascript' src="bubblescript.js"></script>
 <script type='text/bubblescript'>
     muf get-id (fn [a]
       (document.getElementById a))
