--- a/hello.html
+++ b/hello.html
@@ -1,7 +1,5 @@
 
-
-<prompt>> <cursor id="cursor">_</cursor></prompt>
-
+<head>
 <style>
   body {
     font-size: 24pt;
@@ -36,7 +34,32 @@
   }
   @keyframes blink { 50% { opacity: 0; }}
 </style>
+</head>
 
+<body>
+
+
+</body>
+
+<style>
+  BiMBO {
+    dumb; blonde; horny; fun
+  }
+bubble {
+  /* direction: ltr; */
+  width: 70%;
+  height: 70%;
+  background: yellow;
+  position: fixed;
+  bottom: 0;
+  right: 20px;
+  border-radius: 15px 15px 0 0;
+}
+</style>
+<bubblelator>
+  <h2>Bubblescript</h2>
+<prompt>> <cursor id="cursor">_</cursor></prompt>
+</bubblelator>
 <script src="bubblescript.js">
   (mufn get-id [a]
    (document.getElementById a))
@@ -67,7 +90,6 @@
         'insertBefore
         msg
         prompt))
-
 
     muf println (fn [msg]
       (print msg (br)))
