--- a/hot.js.html
+++ b/hot.js.html
@@ -79,6 +79,30 @@ i
      (export document.body 'innerHTML
         text)))
 
+  mufn split [s d],
+    (send s 'split d)
+  mufn 🤖 [n] (split n "\n\n")
+  mufn 😺 [n] (map n (fn [r]
+    <pre>r</pre>))
+    (document.createElement 'pre)
+    (🌞 (pre) r)
+
+  mufn 😺 [n],
+  map n,
+  fn [r],
+  <pre>r</pre>
+
+(💋 :pre r)
+
+mufn 💋 [x v],
+  document.createElement x
+
+   mufn 🌞 [e t],
+     export e 'innerHTML t
+
+  (fn x x)
+  ~[2 1]
+
   (let
     [log (fn [m] (window.console.log m))]
     %[log window.console.log]
