created a dgi macro that expands to a call to document.getElementById.
also fixed some stuff in
the bubblescript.js to
make this work.

This is mostly just testing
an idea, but i think the
short hand can really make
the code more terse.

While the macro is working
on my end, i'm pretty sure
it needs to be optimized 
so that it is only expanded
one time even if it is
reffered to multiple times.
That is my thinking anyway.

--- a/tools/repl.html
+++ b/tools/repl.html
@@ -41,11 +41,32 @@
 
 <script type='text/javascript' src="../bubblescript.js"></script>
 <script type='text/bubblescript'>
+
+  // Aliases
+  muf muff muf
+  muf do list
+
   muf get-id (fn [a]
     (document.getElementById a))
 
-  muf cursor (get-id "cursor")
-  muf prompt  cursor.parentNode
+  muf mufmacro (macro [name args body]
+    (list 'muf name
+      (list 'macro args body)))
+
+  mufmacro dgi [a],
+    (list 'document.getElementById a)
+  // blert (+ 7 7 7)
+
+  // blert (tail [1 2 3])
+
+  // muf dgi (macro [a]
+  //   (list 'document.getElementById a))
+
+  blert (dgi "cursor")
+
+  muf cursor (dgi "cursor")
+
+  muf prompt cursor.parentNode
 
   muf br (fn [meow]
     (document.createElement "br"))
@@ -75,8 +96,6 @@
     (prompt.removeChild
       cursor.previousSibling))
 
-  muf muff muf
-
   muff read (fn []
     (prompt.innerText.slice 2
       (- prompt.innerText.length 1)))
@@ -88,8 +107,6 @@
       (print (document.createTextNode ";=> "))
       (println (evl (parse v)))
       (clear)))
-
-  muf do list
 
   muf arrow-left (fn []
     (prompt.insertBefore cursor
