BuBbLeScRiPt is NaStY!
So now like if you hit on the shift key and stuff, yeah.

--- a/pow/tushie.html
+++ b/pow/tushie.html
@@ -131,13 +131,26 @@
     (prompt.innerText.slice 2
       (- prompt.innerText.length 1)))
 
-  muff 😋 (fn []
+  muff 😋 (fn [pow]
     (let [v (read)]
-      (println v)
-      (let [r (evl (parse v))]
-        // (print (document.createTextNode " ;> "))
-        (print " ;> ")
-        (println r))
+      (if pow
+        // (console.log (new Array (list (pop (parse v)))))
+        // (console.log (list (pop (parse v))))
+
+        (let [v (new Array (list (pop (parse v))))
+              r (evl v)]
+          (println v)
+          // (console.log r)
+          (print " ;> ")
+          (println r))
+        // (let [r (evl (list (pop (parse v))))]
+        //   (print " ;> ")
+        //   (println r))
+        (let [r (evl (parse v))]
+          (println v)
+          // (print (document.createTextNode " ;> "))
+          (print " ;> ")
+          (println r)))
       (clear)))
 
   muf arrow-left (fn []
@@ -165,7 +178,9 @@
   window.addEventListener 'keypress,
     (jsfn [e]
       (if (= e.key "Enter")
-        (😋)
+        (do
+          (console.log e)
+          (😋 e.shiftKey))
         (typeChar e.key)))
 
 
