--- a/pow/tushie.html
+++ b/pow/tushie.html
@@ -11,11 +11,12 @@
     position: fixed;
     bottom: 0;
     right: 10%;
-    border: 1px solid #ff97df;
-    height :350px;
+    /* border: 1px solid #ff97df; */
+    max-height :350px;
     overflow-y: scroll;
     font-size: 1.2em;
     /* padding: 4pt; */
+    unicode-bidi: bidi-override;
   }
   /* #y prompt { */
     /* position: fixed; */
@@ -53,7 +54,7 @@
     color: snow;
     /* height: 1.6em; */
     height: min-content;
-    /* unicode-bidi: bidi-override; */
+    unicode-bidi: bidi-override;
     /* margin: 0 -4pt; */
 }
   cursor {
@@ -61,6 +62,8 @@
     display: inline-block;
     animation: blink;
     animation: blink 1s step-start .5s infinite;
+    /* width: 0; */
+
   }
   @keyframes blink { 50% { opacity: 0; }}
 
@@ -88,14 +91,6 @@
 
   mufmacro dgi [a],
     (list 'document.getElementById a)
-  // blert (+ 7 7 7)
-
-  // blert (tail [1 2 3])
-
-  // muf dgi (macro [a]
-  //   (list 'document.getElementById a))
-
-  // blert (dgi "cursor")
 
   muf cursor (dgi "cursor")
 
@@ -106,7 +101,6 @@
     (document.createElement "br"))
 
   muf print (fn [msg]
-    // (window.console.log prompt msg)
     (y-el.insertBefore
       (document.createTextNode msg)
       prompt))
@@ -144,27 +138,20 @@
     (send (send 🍦 'split "") 'forEach
       (jsfn [c] (typeChar c))))
 
+  f: bg [color],
+    (export localStorage 'bg color),
+    (export document.body.style 'background-color color)
+
   muf backspace (fn [q]
     (prompt.removeChild
       cursor.previousSibling))
 
   muff read (fn []
-    (prompt.innerText.slice 3
-      (- prompt.innerText.length 1)))
-
-  // muff 😋 (fn [pow]
-  //   (let [v (read)]
-  //     (if pow
-  //       (let [v (new Array (list (pop (parse v))))
-  //             r (evl v)]
-  //         (println v)
-  //         (print " ;> ")
-  //         (println r))
-  //       (let [r (evl (parse v))]
-  //         (println v)
-  //         (print " ;> ")
-  //         (println r)))
-  //     (clear)))
+    (export cursor 'innerText "")
+    (let [q (prompt.innerText.slice 3
+      prompt.innerText.length)]
+        (export cursor 'innerText "_")
+        q))
 
   f: scroll [],
     (export y-el 'scrollTop 10000)
@@ -174,12 +161,11 @@
   (muf bhistory (list))
 
   muff 😋 (fn [pow]
+    (cursor.remove)
     (let [v (read)
           q (parse v)
           r (evl q)]
       (println v)
-      // (print " ;> ")
-      // (println r))
       (print-comment (+ "//> " r))
       (muf history (push history v))
       (muf chistory history))
@@ -223,13 +209,11 @@
     (muf bhistory (push bhistory chistory)),
     (clear (peek chistory)),
     (muf chistory (pop chistory))
-    // (blert "cookies")
 
   (mufn arrow-down []
     (muf chistory (peek bhistory))
     (muf bhistory (pop bhistory))
     (clear (peek chistory)))
-
 
   window.addEventListener 'keypress,
     (jsfn [e]
@@ -238,7 +222,6 @@
           (wrap-list)
           (😋))
         (typeChar e.key)))
-
 
   mufn set-direction [dir],
     (export document.body 'dir dir),
@@ -263,6 +246,7 @@
 
   // Initialize document direction.
   (export document.body 'dir localStorage.dir)
+  (export document.body.style 'background-color localStorage.bg)
 
   mufn wrap-list [],
     (clear (+ "(" (read) ")"))
